[package]
name = "adf2html"
version = "1.0.2"
authors = ["Alexey Kropotkin"]
edition = "2024"

description = "This library provides a convenient way to build HTML document body from Atlassian Document Format (ADF) provided by Atlassian v3 API"

readme = "README.md"

repository = "https://github.com/romalexdoo/adf2html.git"

license = "MIT"

keywords = ["ADF", "Atlassian", "Jira"]

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
html-escape = "0.2.13"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.22.0", features = ["v4"] }
